--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
-*,
-*:before,
-*:after {
+:before,
+:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -74,30 +73,34 @@ footer {
 }
 
 .notification {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    width: 20px;
-    height: 20px;
-    border-radius: 6px;
-    border: 2px solid rgba(0,0,0,0.15);
-    border-top: 2px solid rgba(255,255,255,0.5);
-    border-left: 2px solid rgba(255,255,255,0.5);
-    background-color: green;
-    box-shadow: 0 3px 1px red;
+  position: absolute;
+  top: 20px;
+  left: 420px;
+  width: 100px;
+  height: 60px;
+  border-radius: 25px;
+  border: 2px solid rgba(0,0,0,0.15);
+  border-top: 2px solid rgba(255,255,255,0.5);
+  border-left: 2px solid rgba(255,255,255,0.5);
+  background-color: #666;
+  box-shadow: 0 3px 1px red;
 }
 
 .stuff:nth-child(3) {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    margin: 0;
+  position: fixed;
+  top: 60%;
+  left: 60%;
+  transform: translate(-50%,-50%);
+  margin: 0;
 }
 
 .stuff:nth-child(even) {
-    background-color: #999;
+  position: absolute;
+  top: 70%;
+  left: 70%;
+  margin: 0;
+  background-color: #1BD29C;
+  box-shadow: 0 3px 1px 0 blue;
 }
 
 /* Sandbox: Positioning */
-
