Added columns mainContainer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,10 @@ footer {
 
 /* Theme */
 
-#mainContainer {}
+#mainContainer {
+    column-count: 4;
+    column-width: 500px;
+}
 
 .wrapper {
     width: 100%;
